# earnings-call-multimodal-framework

./: .gitignore  CITATION.cff  README.md  SetUp_Ollama_on_GPU.md  pyproject.toml  requirements.txt  setup.py  tree.txt
config/: config.yaml
docs/: requirements.txt
docs/source/: conf.py  earningscall_framework.embeddings.builder.rst  earningscall_framework.embeddings.rst  earningscall_framework.embeddings.speech_tree.rst  earningscall_framework.embeddings.visualizer.rst  earningscall_framework.processing.metadata.rst  earningscall_framework.processing.multimodal.audio.rst  earningscall_framework.processing.multimodal.rst  earningscall_framework.processing.multimodal.text.rst  earningscall_framework.processing.preprocessing.rst  earningscall_framework.processing.rst  earningscall_framework.rst  earningscall_framework.runners.rst  earningscall_framework.utils.rst  index.rst  modules.rst
notebooks/: Obtain_conference_info.ipynb  Obtain_conferences_embeddings.ipynb  response_type_population_analysis.ipynb  train_encoders.ipynb
src/earningscall_framework/: cli.py  config.py
src/earningscall_framework/analysis_response_patterns/: __init__.py  config.py
src/earningscall_framework/analysis_response_patterns/features/: emotion_aggregator.py  (+1 more)
src/earningscall_framework/data_adquisition/: Company.py
src/earningscall_framework/processing/: basics.py  pipeline.py  processor.py
src/earningscall_framework/runners/: __init__.py  base.py  downloads_runner.py  embeds_runner.py  process_runner.py
src/earningscall_framework/utils/: cli.py  files.py  logging.py
(+43 files in other folders)
